--- a/estilos.css
+++ b/estilos.css
@@ -220,7 +220,9 @@ main{
     margin: 35px;
     margin-left: -40%;
     position:absolute;
-    bottom: 0;    
+    bottom: 0;
+    left: 0;
+    visibility: hidden;    
     padding: 24px;
     font-size: 16px;
     line-height: 19px;
